# Flying_Event_ADSB_Tracker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/: docker-compose.prod.yml  feat-lightsail-key.pem  start.sh
docs/: architecture.md  database-schema.md  feature-plan.md  native-aws-option.md
migrations/: env.py
migrations/versions/: 0001_initial.py
src/app/: config.py  db.py  dependencies.py  main.py  models.py  worker_main.py
src/app/routers/: __init__.py  admin.py  auth.py  public.py
src/app/services/: adsb.py  airports.py  auth.py  domain.py  geofence.py  poller.py  providers.py  worker.py
src/app/static/: map.js  styles.css
src/app/templates/: base.html
src/app/templates/admin/: _admin_nav.html  _event_header.html  create_event.html  dashboard.html  event_configuration.html  event_detail.html  event_diagnostics.html  event_operations.html  user_admin.html
src/app/templates/auth/: login.html  reset_complete.html  reset_request.html
src/app/templates/public/: event_detail.html  index.html
src/flying_event_adsb_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/templates/: bootstrap.sh.tftpl
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_airports.py  test_domain.py  test_provider_worker.py
